; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/sio/extr_SNew.c_SNewStreamServer.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/sio/extr_SNew.c_SNewStreamServer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AF_INET = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@kSNewFailed = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@kSBindFailed = common dso_local global i32 0, align 4
@kSListenFailed = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SNewStreamServer(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* @AF_INET, align 4
  %13 = load i32, i32* @SOCK_STREAM, align 4
  %14 = call i32 @socket(i32 %12, i32 %13, i32 0)
  store i32 %14, i32* %11, align 4
  %15 = load i32, i32* %11, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i32, i32* @kSNewFailed, align 4
  store i32 %18, i32* %5, align 4
  br label %45

19:                                               ; preds = %4
  %20 = load i32, i32* %11, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %8, align 4
  %24 = call i64 @SBind(i32 %20, i32 %21, i32 %22, i32 %23)
  %25 = icmp slt i64 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %19
  %27 = load i32, i32* @errno, align 4
  store i32 %27, i32* %10, align 4
  %28 = load i32, i32* %11, align 4
  %29 = call i32 @closesocket(i32 %28)
  %30 = load i32, i32* %10, align 4
  store i32 %30, i32* @errno, align 4
  %31 = load i32, i32* @kSBindFailed, align 4
  store i32 %31, i32* %5, align 4
  br label %45

32:                                               ; preds = %19
  %33 = load i32, i32* %11, align 4
  %34 = load i32, i32* %9, align 4
  %35 = call i64 @SListen(i32 %33, i32 %34)
  %36 = icmp slt i64 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %32
  %38 = load i32, i32* @errno, align 4
  store i32 %38, i32* %10, align 4
  %39 = load i32, i32* %11, align 4
  %40 = call i32 @closesocket(i32 %39)
  %41 = load i32, i32* %10, align 4
  store i32 %41, i32* @errno, align 4
  %42 = load i32, i32* @kSListenFailed, align 4
  store i32 %42, i32* %5, align 4
  br label %45

43:                                               ; preds = %32
  %44 = load i32, i32* %11, align 4
  store i32 %44, i32* %5, align 4
  br label %45

45:                                               ; preds = %43, %37, %26, %17
  %46 = load i32, i32* %5, align 4
  ret i32 %46
}

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i64 @SBind(i32, i32, i32, i32) #1

declare dso_local i32 @closesocket(i32) #1

declare dso_local i64 @SListen(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
